--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
   <h1>Hello, this is a test for PR deployments!</h1>
   <p>Deployed via Docker for PR #</p>
+  <p> Hello this is a test for automatic PRdeployment</>
 </body>
 </html>
